<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/banner"
            android:background="@android:color/white">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:id="@+id/tvDescription"
                android:text="@string/download_it_from_google_play_sms" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/tvDescription"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/cancel_button"
                    android:padding="4dp"
                    android:text="@string/cancel"
                    android:textColor="@drawable/button_text_color_cancel" />

                <Button
                    android:id="@+id/btnDownload"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:padding="10dp"
                    android:text="@string/download"
                    android:textColor="@drawable/button_text_color" />
            </LinearLayout>


        </RelativeLayout>

        <ImageView
            android:id="@+id/banner"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/top_banner_sms" />

    </RelativeLayout>


</RelativeLayout>