<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/rlSplash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:visibility="visible">


        <RelativeLayout
            android:id="@+id/gifview"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/loading_animation"
                style="@style/loading_animation_image"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlSplashContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_alignParentBottom="true"
            android:layout_below="@+id/gifview">

            <ImageView
                android:id="@+id/ivBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"

                />

            <RelativeLayout
                android:id="@+id/rlLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tbLoading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                   android:fontFamily="@font/montserrat_regular"
                    android:text="@string/tv_load_themes"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/buttons_color"
                    android:textSize="25dp"
                    />

                <TextView
                    android:id="@+id/pleaseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tbLoading"
                    android:layout_marginTop="7dp"
                   android:fontFamily="@font/montserrat_regular"
                    android:text="@string/tv_wait"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/buttons_color"
                    android:textSize="25dp"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/lnLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/rlLoading"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:paddingBottom="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/tvAppName">

                    <ImageView
                        android:layout_width="145dp"
                        android:layout_height="145dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:visibility="visible"
                        android:src="@mipmap/logo"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />
                </RelativeLayout>


                <TextView
                    android:id="@+id/tvAppName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tvDesc"
                    android:text="@string/tv_app_name_sms"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/buttons_color"
                    android:textSize="25dp"
                     />

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="14dp"
                    android:text="@string/tv_app_description"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/buttons_color"
                    android:textSize="25sp" />


            </RelativeLayout>
        </RelativeLayout>


    </RelativeLayout>
</RelativeLayout>